--- a/hybrid/web/src/app/solplace-logs/new/styles.module.css
+++ b/hybrid/web/src/app/solplace-logs/new/styles.module.css
@@ -10,7 +10,7 @@
 .layout {
     display: flex;
     flex-direction: column;
-    margin: 3.125rem auto auto auto;
+    margin-top: 3.125rem;
 }
 
 .titleBox {
@@ -85,6 +85,18 @@
     padding: 0 0 1.25rem 0;
 }
 
+.placeAddressBoxInput {
+    font-weight: 700;
+    width: 100%;
+    border: 0.0625rem solid #d4d3d3;
+    border-radius: 0.5rem;
+    height: 2.75rem;
+    padding: 0.75rem 1rem;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
 .placeAddressBox button {
     width: 100%;
     border: 1px solid #000;
@@ -98,17 +110,25 @@
     font-weight: 700;
 }
 
+.placeContentsBox {
+    margin-bottom: 2.5rem;
+}
+
 .textarea {
     width: 100%;
     height: 12.5rem;
     border: 1px solid #d4d3d3;
     border-radius: 0.5rem;
     padding: 0.75rem 1rem;
-    margin-bottom: 2.5rem;
 }
 
 .logBtnBox {
+}
+
+.logBtnBoxLogBtn {
+    width: 100%;
     text-align: center;
+    /* border: 1px solid red; */
     border-radius: 0.5rem;
     padding: 0.75rem 1rem;
 }
